Added stroganoff Recipe
Added basic HTML for a stroganoff recipe

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -20,6 +20,7 @@
         <li>Olive Oil</li>
         <li>Salt and Pepper</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
         <li>Preheat the oven: Start by preheating your oven to the recommended temperature specified in your pizza dough recipe or on the store-bought dough packaging. This is usually around 450°F (230°C) or higher for a crispy crust.</li>
         <li>Prepare the dough: If you are making your own dough, follow your chosen recipe to prepare the dough by combining flour, water, yeast, salt, and olive oil. Knead the dough until it becomes smooth and elastic. If using store-bought dough, remove it from the packaging and let it rest at room temperature for a few minutes.</li>
