--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Pizza Recipe</a>
+    <ul>
+        <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="recipes/stroganoff.html">Stroganoff Recipe</a></li>
+    </ul>
+    
 
 </body>
 </html>
